--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,19 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "copy": "mkdir -p /dist && cp ./index.html /dist/index.html && cp ./index.css /dist/index.css",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config ./webpack.dev.config.js --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.5.11"
+    "vue": "^2.5.11",
+    "socket.io": "^4.3.0",
+    "vue-loader": "^13.0.5",
+    "vue-router": "^3.5.2",
+    "vue-template-compiler": "^2.4.4",
+    "vuex": "^3.6.2",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.4"
   },
   "browserslist": [
     "> 1%",
@@ -23,9 +31,11 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
+    "copyfiles": "^2.4.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "rimraf": "^3.0.2",
     "socket.io": "^4.3.0",
     "vue-loader": "^13.0.5",
     "vue-router": "^3.5.2",
