--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "clean": "rimraf dist/",
-    "build-ts": "tsc -w",
-    "copy": "copyfiles -u 1 src/*.html src/*.css dist/",
+    "build": "tsc",
+    "build-ts-watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && npm run copy && nodemon dist/server.js"
+    "start": "tsc && cross-env NODE_ENV=development nodemon dist/server.js",
+    "serve": "cross-env NODE_ENV=production node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -25,9 +25,12 @@
     "socket.io": "^4.2.0",
     "ts-node": "^10.3.0",
     "tslint": "^5.12.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "express": "^4.16.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "socket.io": "^4.2.0",
     "express": "^4.16.4"
   }
 }
