--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "tsc && cross-env NODE_ENV=development nodemon dist/server.js",
     "serve-local": "cross-env NODE_ENV=production node dist/server.js",
-    "start": "NODE_ENV=production PORT=80 node server.js"
+    "start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
