--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Deploy to heroku.
 on:
   # Triggers the workflow on push or pull request events but only for the master, feature/deployment branch
   push:
-    branches: [ master, feature/deployment ]
+    branches: [ master, feature/deployment, feature/vue_typescript ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
