--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build": "tsc",
     "build-ts-watch": "tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "tsc && cross-env NODE_ENV=development nodemon dist/server.js",
+    "test:e2e": "node e2e",
+    "test:unit": "ts-mocha src/**/*.test.ts",
+    "start-dev": "tsc && nodemon dist/server.js",
     "serve-local": "cross-env NODE_ENV=production node dist/server.js",
     "start": "NODE_ENV=production node server.js"
   },
@@ -15,23 +16,34 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.2.22",
     "@types/cors": "^2.8.12",
+    "@types/expect": "^24.3.0",
     "@types/express": "^4.16.1",
+    "@types/mocha": "^9.0.0",
     "@types/node": "^16.10.3",
+    "@types/ramda": "^0.27.45",
+    "@types/sinon": "^10.0.4",
     "@types/socket.io": "^3.0.2",
+    "chai": "^4.3.4",
     "copyfiles": "^2.4.1",
-    "cors": "^2.8.5",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.13",
     "rimraf": "^3.0.2",
-    "socket.io": "^4.2.0",
+    "sinon": "^11.1.2",
+    "ts-mocha": "^8.0.0",
     "ts-node": "^10.3.0",
     "tslint": "^5.12.1",
     "typescript": "^4.4.3",
-    "express": "^4.16.4"
+    "unknown-ts": "^0.1.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "socket.io": "^4.2.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "fp-ts": "^2.11.5",
+    "fp-ts-std": "^0.11.0",
+    "io-ts": "^2.2.16",
+    "ramda": "^0.27.1",
+    "socket.io": "^4.2.0"
   }
 }
