--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "build-ts-watch": "tsc -w",
     "test:e2e": "node e2e",
     "test:unit": "ts-mocha src/**/*.test.ts",
+    "test:server": "ts-mocha src/service/socket.test.ts",
     "start-dev": "tsc && nodemon dist/server.js",
     "serve-local": "cross-env NODE_ENV=production node dist/server.js",
     "start": "NODE_ENV=production node server.js"
@@ -25,9 +26,11 @@
     "@types/ramda": "^0.27.45",
     "@types/sinon": "^10.0.4",
     "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "chai": "^4.3.4",
     "copyfiles": "^2.4.1",
     "mocha": "^9.1.3",
+    "mock-socket": "^9.0.6",
     "nodemon": "^2.0.13",
     "rimraf": "^3.0.2",
     "sinon": "^11.1.2",
