--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "test:e2e": "node e2e",
     "test:unit": "ts-mocha src/**/*.test.ts",
     "test:socket": "ts-mocha src/service/socket.test.ts --timeout 5000",
+    "lint": "eslint . --ext .ts",
     "start-dev": "tsc && nodemon dist/server.js",
     "serve-local": "cross-env NODE_ENV=production node dist/server.js",
     "start": "NODE_ENV=production node server.js"
@@ -27,8 +28,11 @@
     "@types/sinon": "^10.0.4",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
     "chai": "^4.3.4",
     "copyfiles": "^2.4.1",
+    "eslint": "^8.1.0",
     "mocha": "^9.1.3",
     "mock-socket": "^9.0.6",
     "nodemon": "^2.0.13",
