--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,31 @@ name: Deploy to heroku.
 on:
   # Triggers the workflow on push or pull request events but only for the master, feature/deployment branch
   push:
-    branches: [ master, feature/deployment, feature/vue_typescript ]
+    branches: [ master, feature/deployment, feature/unit_test_ci ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
+  unit-test:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14.18]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        path: "./server/package.json"
+    - run: npm ci
+    - run: npm run test:unit
+
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
