--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,9 +27,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        path: "./server/package.json"
-    - run: npm ci
-    - run: npm run test:unit
+        
+    - run: |
+        cd ./server
+        npm ci
+    - run: |
+        cd ./server
+        npm run test:unit
 
   build:
     # The type of runner that the job will run on
