--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,69 +13,64 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  unit-test:
+
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14.18]
-
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      - name: Run unit tests
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
         
-    - run: |
-        cd ./server
-        npm ci
-    - run: |
-        cd ./server
-        npm run test:unit
+      - run: |
+          cd ./server
+          npm ci
+      - run: |
+          cd ./server
+          npm run lint
+      - run: |
+          cd ./server
+          npm run test:coverage
 
-  # build:
-  #   # The type of runner that the job will run on
-  #   runs-on: ubuntu-latest
+      - name: Build, Push and Release a Docker container to Heroku. # Your custom step name
+        uses: gonuit/heroku-docker-deploy@v1.3.3 # GitHub action name (leave it as it is).
+        with:
+          # Below you must provide variables for your Heroku app.
 
-  #   # Steps represent a sequence of tasks that will be executed as part of the job
-  #   steps:
-  #     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-  #     - uses: actions/checkout@v2
-
-  #     - name: Build, Push and Release a Docker container to Heroku. # Your custom step name
-  #       uses: gonuit/heroku-docker-deploy@v1.3.3 # GitHub action name (leave it as it is).
-  #       with:
-  #         # Below you must provide variables for your Heroku app.
-
-  #         # The email address associated with your Heroku account.
-  #         # If you don't want to use repository secrets (which is recommended) you can do:
-  #         # email: my.email@example.com
-  #         email: ${{ secrets.HEROKU_EMAIL }}
+          # The email address associated with your Heroku account.
+          # If you don't want to use repository secrets (which is recommended) you can do:
+          # email: my.email@example.com
+          email: ${{ secrets.HEROKU_EMAIL }}
           
-  #         # Heroku API key associated with provided user's email.
-  #         # Api Key is available under your Heroku account settings.
-  #         heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+          # Heroku API key associated with provided user's email.
+          # Api Key is available under your Heroku account settings.
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
           
-  #         # Name of the heroku application to which the build is to be sent.
-  #         heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+          # Name of the heroku application to which the build is to be sent.
+          heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
 
-  #         # (Optional, default: "./")
-  #         # Dockerfile directory.
-  #         # For example, if you have a Dockerfile in the root of your project, leave it as follows:
-  #         dockerfile_directory: ./
+          # (Optional, default: "./")
+          # Dockerfile directory.
+          # For example, if you have a Dockerfile in the root of your project, leave it as follows:
+          dockerfile_directory: ./
 
-  #         # (Optional, default: "Dockerfile")
-  #         # Dockerfile name.
-  #         dockerfile_name: Dockerfile
+          # (Optional, default: "Dockerfile")
+          # Dockerfile name.
+          dockerfile_name: Dockerfile
 
-  #         # (Optional, default: "")
-  #         # Additional options of docker build command.
-  #         docker_options: "--no-cache"
+          # (Optional, default: "")
+          # Additional options of docker build command.
+          docker_options: "--no-cache"
 
-  #         # (Optional, default: "web")
-  #         # Select the process type for which you want the docker container to be uploaded.
-  #         # By default, this argument is set to "web".
-  #         # For more information look at https://devcenter.heroku.com/articles/process-model
-  #         process_type: web
+          # (Optional, default: "web")
+          # Select the process type for which you want the docker container to be uploaded.
+          # By default, this argument is set to "web".
+          # For more information look at https://devcenter.heroku.com/articles/process-model
+          process_type: web
