--- a/server/package.json
+++ b/server/package.json
@@ -6,18 +6,18 @@
   "scripts": {
     "build": "tsc",
     "build-ts-watch": "tsc -w",
-    "test:e2e": "node e2e",
-    "test:unit": "ts-mocha src/**/*.test.ts",
-    "test:socket": "ts-mocha src/service/socket.test.ts --timeout 5000",
+    "test:unit": "ts-mocha src/**/*.test.ts --exit",
+    "test:coverage": "nyc npm run test:unit",
+    "test:socket": "ts-mocha src/service/socket.test.ts --timeout 5000 --exit",
     "lint": "eslint . --ext .ts",
     "start-dev": "tsc && nodemon dist/server.js",
-    "serve-local": "cross-env NODE_ENV=production node dist/server.js",
     "start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/chai": "^4.2.22",
     "@types/cors": "^2.8.12",
     "@types/expect": "^24.3.0",
@@ -36,6 +36,7 @@
     "mocha": "^9.1.3",
     "mock-socket": "^9.0.6",
     "nodemon": "^2.0.13",
+    "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "sinon": "^11.1.2",
     "ts-mocha": "^8.0.0",
@@ -52,5 +53,24 @@
     "io-ts": "^2.2.16",
     "ramda": "^0.27.1",
     "socket.io": "^4.2.0"
+  },
+  "nyc": {
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "check-coverage": true,
+    "all": true,
+    "include": [
+      "src/**/!(*.test.*).[tj]s?(x)"
+    ],
+    "exclude": [
+      "src/_tests_/**/*.*",
+      "src/server.ts"
+    ],
+    "reporter": [
+      "html",
+      "lcov",
+      "text",
+      "text-summary"
+    ],
+    "report-dir": "src/coverage"
   }
 }
